[package]
name = "cartridge"
version = "0.1.0"
edition = "2024"

[dependencies]
account_sdk = { git = "https://github.com/cartridge-gg/controller-rs.git", package = "account_sdk" }
starknet = "0.13.0"
url = "2.5.4"
actix-cors = "0.7.1"
actix-web = "4.10.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
